Client/Fix: Fixed PostItem header not being aligned

--- a/client/styles/UserHomePage.css
+++ b/client/styles/UserHomePage.css
@@ -122,6 +122,7 @@
     width: 100%;
 }
 
+.post-header div,
 .entry-header div {
     display: flex;
     align-items: center;
